--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,8 @@ paginate:           5
 paginate_path:      "/posts/page:num/"
 plugins:
   - jekyll-paginate
+
+# 블로그 disqus shortname
+
+disqus:
+  shortname: http-the-underdogs-kr
